plugins {
	id 'java'
	id 'checkstyle'
	id 'jacoco'
	id 'org.sonarqube' version '7.2.3.7755'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

checkstyle {
	toolVersion = '10.21.4'
	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

group = 'com.optivem.shop.backend'
version = '0.0.1-SNAPSHOT'
description = 'Starter - Backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	runtimeOnly 'org.postgresql:postgresql'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
	}
}

sonar {
	properties {
		property 'sonar.projectKey', 'optivem_starter-multitier-backend-java'
		property 'sonar.projectName', 'starter-multitier-backend-java'
		property 'sonar.organization', 'optivem'
		property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
	}
}